--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -104,15 +104,32 @@
                 android:textSize="18sp"
                 />
             
-            <TextView android:id="@+id/tourreport_time_value"
+            <TextView android:id="@+id/tourreport_starttime_value"
                 android:layout_width="0dp"
-                android:layout_weight="4"
+                android:layout_weight="2"
                 android:layout_height="wrap_content"
                 android:textColor="@color/red"
                 android:textSize="18sp"
                 android:layout_marginLeft="10dp"
                 />
             
+            <TextView android:id="@+id/tourreport_time_title"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="@string/tourreport_time_span_title"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                />
+            
+            <TextView android:id="@+id/tourreport_endtime_value"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:textColor="@color/red"
+                android:textSize="18sp"
+                android:layout_marginLeft="10dp"
+                />
             
             
         </LinearLayout>
