main activity modify

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MainActivity" >
 
     <!-- 班报提报主界面 -->
@@ -21,119 +22,126 @@
         android:layout_below="@id/title_bar"
         android:fadingEdge="none" >
 
-        <LinearLayout android:orientation="vertical"
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            >
-        <LinearLayout 
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:gravity="center">
-            
-            <TextView android:id="@+id/tourreport_holenumber_title"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
-                android:text="@string/tourreport_holenumber_title"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                />
-            
-            <TextView android:id="@+id/tourreport_holenumber_value"
-                android:layout_width="0dp"
-                android:layout_weight="4"
-                android:layout_height="wrap_content"
-                android:textColor="@color/red"
-                android:textSize="18sp"
-                android:layout_marginLeft="10dp"
-                />
-            
-            <TextView android:id="@+id/tourreport_rigmachine_number_title"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
-                android:text="@string/tourreport_rigmachine_title"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                />
-            
-            <TextView android:id="@+id/tourreport_rigmachine_number_value"
-                android:layout_width="0dp"
-                android:layout_weight="5"
-                android:layout_height="wrap_content"
-                android:textColor="@color/red"
-                android:textSize="18sp"
-                android:layout_marginLeft="10dp"
-                />
-        </LinearLayout>
-        
-        
-        <LinearLayout 
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:gravity="center">
-            
-            <TextView android:id="@+id/tourreport_date_title"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
-                android:text="@string/tourreport_date_title"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                />
+            android:orientation="vertical" >
 
-            <TextView android:id="@+id/tourreport_date_value"
-                android:layout_width="0dp"
-                android:layout_weight="4"
+            <LinearLayout
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/red"
-                android:textSize="18sp"
                 android:layout_marginLeft="10dp"
-                />
-            
-            <TextView android:id="@+id/tourreport_time_title"
-                android:layout_width="0dp"
-                android:layout_weight="2"
+                android:gravity="center"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/tourreport_holenumber_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/tourreport_holenumber_title"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <!-- 钻孔编号 -->
+
+                <TextView
+                    android:id="@+id/tourreport_holenumber_value"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="1dp"
+                    android:layout_weight="4"
+                    android:textColor="@color/red"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/tourreport_rigmachine_number_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/tourreport_rigmachine_title"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <!-- 钻机编号 -->
+
+                <TextView
+                    android:id="@+id/tourreport_rigmachine_number_value"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="1dp"
+                    android:layout_weight="5"
+                    android:textColor="@color/red"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/tourreport_time_title"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                />
-            
-            <TextView android:id="@+id/tourreport_starttime_value"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
-                android:textColor="@color/red"
-                android:textSize="18sp"
                 android:layout_marginLeft="10dp"
-                />
+                android:gravity="center"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/tourreport_date_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/tourreport_date_title"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <!-- 班报日期 -->
+
+                <TextView
+                    android:id="@+id/tourreport_date_value"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="1dp"
+                    android:layout_weight="4"
+                    android:textColor="@color/red"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/tourreport_starttime_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/tourreport_time_title"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+                <!-- 班报开始时间 -->
+
+                <TextView
+                    android:id="@+id/tourreport_starttime_value"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="1dp"
+                    android:layout_weight="2"
+                    android:textColor="@color/red"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/tourreport_endtime_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/tourreport_time_span_title"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+                <!-- 班报结束日期 -->
+
+                <TextView
+                    android:id="@+id/tourreport_endtime_value"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="1dp"
+                    android:layout_weight="2"
+                    android:textColor="@color/red"
+                    android:textSize="18sp" />
+            </LinearLayout>
             
-            <TextView android:id="@+id/tourreport_time_title"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="@string/tourreport_time_span_title"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                />
             
-            <TextView android:id="@+id/tourreport_endtime_value"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
-                android:textColor="@color/red"
-                android:textSize="18sp"
-                android:layout_marginLeft="10dp"
-                />
-            
-            
-        </LinearLayout>
-        
         </LinearLayout>
     </ScrollView>
 
