--- a/res/layout/title.xml
+++ b/res/layout/title.xml
@@ -6,18 +6,10 @@
     android:gravity="fill_horizontal"
     android:orientation="horizontal" >
 
-    <ImageView
-        android:id="@+id/title_img_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginLeft="10dp"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_4_collections_view_as_grid" />
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="20pt"
         android:layout_centerVertical="true"
         android:layout_centerInParent="true"
@@ -26,7 +18,7 @@
         android:textSize="20sp" >
     </TextView>
 
-    <ImageView 
+    <!--  ImageView 
         android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
         android:adjustViewBounds="true"
@@ -34,6 +26,6 @@
         android:contentDescription="@string/settings" 
         android:layout_alignParentRight="true"
         android:paddingRight="10dp"
-         />
+         /-->
 
 </RelativeLayout>
