--- a/res/layout/activity_workcontent.xml
+++ b/res/layout/activity_workcontent.xml
@@ -1,9 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical"
+    android:background="@drawable/android_layout_bg"
     tools:context=".WorkcontentActivity" >
 
     <!-- 班报填写的工作内容界面 -->
@@ -15,7 +15,7 @@
     <ScrollView
         android:id="@+id/news_srollview"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_below="@id/title_bar"
         android:fadingEdge="none" >
 
@@ -27,60 +27,70 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
+                android:background="@drawable/bg_layerlist"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_marginLeft="10dp"
+                    android:gravity="right|center"
+                    android:layout_width="100.0dip"
+                    android:layout_gravity="center_vertical"
                     android:text="@string/tourreport_time_title"
-                    android:textColor="@color/black_25"
+                    android:textColor="@color/black"
                     android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/sub_starttime_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
+                    android:gravity="right|center"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"
                     android:textColor="@color/red"
                     android:textSize="18sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="right|center"
                     android:text="@string/tourreport_time_to"
+                    android:layout_gravity="center_vertical"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/sub_endtime_value"
+                    android:gravity="right|center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
+                    android:layout_gravity="center_vertical"
                     android:textColor="@color/red"
                     android:textSize="18sp" />
             </LinearLayout>
 
+            <!-- 工作内容 -->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_height="60dp"
+                android:background="@drawable/bg_layerlist"
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:gravity="right|center"
+                    android:layout_width="100.0dip"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"
                     android:text="@string/tourreport_workcontent_title"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
 
                 <Spinner
                     android:id="@+id/sub_workcontent"
-                    android:layout_width="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp" />
             </LinearLayout>
@@ -89,33 +99,29 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
+                android:background="@drawable/bg_layerlist"
                 android:id="@+id/linelayout_upleft"
-                android:layout_marginTop="10dp"
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:gravity="right|center"
+                    android:layout_width="100.0dip"
+                    style="@style/form_row_label"
                     android:text="@string/tourreport_upleft_title"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/sub_workcontent_upleft"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:layout_gravity="center_vertical"
                     android:hint="@string/workcontent_upleft_hint"
                     android:inputType="numberDecimal"
                     android:textColor="@color/red"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/mile"
-                    android:textColor="@color/black"
                     android:textSize="18sp" />
             </LinearLayout>
 
@@ -123,231 +129,222 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
+                android:background="@drawable/bg_layerlist"
                 android:id="@+id/linelayout_drillinglength"
-                android:layout_marginTop="10dp"
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:gravity="right|center"
+                    android:layout_width="100.0dip"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    style="@style/form_row_label"
                     android:text="@string/tourreport_drilllength_title"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/sub_workcontent_drillinglength"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="10dp"
                     android:hint="@string/workcontent_drillinglength_hint"
                     android:inputType="numberDecimal"
                     android:textColor="@color/red"
                     android:textSize="18sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/mile"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
             </LinearLayout>
 
             <!-- 孔深 -->
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
+                android:background="@drawable/bg_layerlist"
                 android:id="@+id/linelayout_holedeep"
-                android:layout_marginTop="10dp"
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:gravity="right|center"
+                    android:layout_width="100.0dip"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"
                     android:text="@string/tourreport_holedeep_title"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/sub_workcontent_holedeep"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:layout_gravity="center_vertical"
                     android:hint="@string/workcontent_holedeep_hint"
                     android:inputType="numberDecimal"
                     android:textColor="@color/red"
                     android:textSize="18sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/mile"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-            </LinearLayout>
+                </LinearLayout>
 
             <!-- 岩心长度 -->
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:id="@+id/linelayout_corelength"
-                android:layout_marginTop="10dp"
+                android:background="@drawable/bg_layerlist"
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:gravity="right|center"
+                    android:layout_width="100.0dip"
+                    android:layout_gravity="center_vertical"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
                     android:text="@string/tourreport_core_length_title"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/sub_workcontent_core_length"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:layout_gravity="center_vertical"
                     android:hint="@string/workcontent_corelength_hint"
                     android:inputType="numberDecimal"
                     android:textColor="@color/red"
                     android:textSize="18sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/mile"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
             </LinearLayout>
 
             <!-- 钻压 -->
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
+                android:background="@drawable/bg_layerlist"
                 android:id="@+id/linelayout_pressure"
-                android:layout_marginTop="10dp"
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:gravity="right|center"
+                    android:layout_width="100.0dip"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"
                     android:text="@string/tourreport_drilling_pressure_title"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/sub_workcontent_pressure"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                  	android:layout_marginRight="10dp"
                     android:hint="@string/workcontent_pressure_hint"
                     android:inputType="numberDecimal"
                     android:textColor="@color/red"
                     android:textSize="18sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/kilogram"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
             </LinearLayout>
 
             <!-- 转速 -->
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
+                android:background="@drawable/bg_layerlist"
                 android:id="@+id/linelayout_rotatespeed"
-                android:layout_marginTop="10dp"
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="100.0dip"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:gravity="right|center"
+                    android:layout_gravity="center_vertical"
                     android:text="@string/tourreport_rotate_speed_title"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/sub_workcontent_rotatespeed"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:hint="@string/workcontent_rotatespeed_hint"
                     android:inputType="numberDecimal"
+                    android:layout_marginRight="10dp"
                     android:textColor="@color/red"
                     android:textSize="18sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/rotatespeed"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
             </LinearLayout>
 
             <!-- 泵量 -->
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
+                android:background="@drawable/bg_layerlist"
                 android:id="@+id/linelayout_pump"
-                android:layout_marginTop="10dp"
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="100.0dip"
+                    android:gravity="right|center"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"
                     android:text="@string/tourreport_pump_title"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
 
                 <EditText
                     android:id="@+id/sub_workcontent_pump"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:hint="@string/workcontent_pump_hint"
                     android:inputType="numberDecimal"
                     android:textColor="@color/red"
+                    android:layout_marginRight="10dp"
                     android:textSize="18sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/L"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
             </LinearLayout>
 
             <!-- 确定按钮 -->
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_height="60dp"
+                android:gravity="center_vertical|center_horizontal"
+                android:background="@drawable/bg_layerlist"
                 android:orientation="horizontal" >
 
                 <Button
-                    android:id="@+id/workcontent_save"
+                    android:id="@+id/workcontent_btn_save"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
                     android:layout_width="100dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center"
                     android:layout_height="wrap_content"
                     android:text="@string/workcontent_save"
                     android:textColor="@color/blue"
                     android:textSize="18sp" />
                 
                 <Button
-                    android:id="@+id/workcontent_cancel"
+                    android:id="@+id/workcontent_btn_cancel"
                     android:layout_width="100dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_toRightOf="@id/workcontent_btn_save"
+                    android:gravity="center"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
                     android:text="@string/workcontent_cancel"
                     android:textColor="@color/blue"
                     android:textSize="18sp" />
-            </LinearLayout>
+            </RelativeLayout>
         </LinearLayout>
     </ScrollView>
 
