--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,4 +17,44 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="common_bg">
+		<item name="android:background">@drawable/theback_bg</item>
+		<item name="android:layout_width">fill_parent</item>
+		<item name="android:layout_height">fill_parent</item>
+	</style>
+    
+    <style name="form_row_label" parent="@style/common_row_label">
+		<item name="android:textSize">14.0dip</item>
+		<item name="android:gravity">right</item>
+		<item name="android:layout_gravity">center_vertical</item>
+		<item name="android:layout_width">75.0dip</item>
+	</style>
+	
+    
+    <style name="common_row_label">
+		<item name="android:textSize">15.0dip</item>
+		<item name="android:textColor">#ff826d28</item>
+		<item name="android:ellipsize">marquee</item>
+		<item name="android:gravity">left</item>
+		<item name="android:layout_gravity">center</item>
+		<item name="android:paddingLeft">15.0dip</item>
+		<item name="android:layout_width">75.0dip</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:singleLine">true</item>
+	</style>
+	
+    <style name="common_row_layout_middle" parent="@style/common_row_layout">
+		<item name="android:background">@drawable/common_row_layout_middle</item>
+		<item name="android:layout_height">wrap_content</item>
+	</style>
+	
+    <style name="common_row_layout">
+		<item name="android:background">@drawable/common_row_layout</item>
+		<item name="android:focusable">true</item>
+		<item name="android:clickable">true</item>
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">50.0dip</item>
+	</style>
+	
+    
 </resources>
